--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "keksobooking",
   "version": "24.0.0",
   "private": true,
@@ -7,7 +8,7 @@
     "type": "git",
     "url": "git@github.com:htmlacademy-javascript/1873491-keksobooking-24.git"
   },
-    "bugs": {
+  "bugs": {
     "url": "https://github.com/htmlacademy-javascript/1873491-keksobooking-24/issues"
   },
   "devDependencies": {
